# srtla

./: .clang-format  CMakeLists.txt  EXTENDED_KEEPALIVE_FIX.md  README.md
.serena/: project.yml
docs/: connection-info-comparison.md  implementation-checklist.md  implementation-summary.md  keepalive-improvements.md  technical-design.md
src/: common.c  common.h  main.cpp  main.h  receiver.cpp  receiver.h  receiver_config.h  receiver_main.cpp  sender.cpp  sender.h
src/connection/: connection.cpp  connection.h  connection_group.cpp  connection_group.h  connection_registry.cpp  connection_registry.h
src/metrics/: metrics_writer.h
src/protocol/: pad_sendto.h  srt_handler.cpp  srt_handler.h  srtla_handler.cpp  srtla_handler.h
src/quality/: load_balancer.cpp  load_balancer.h  metrics_collector.cpp  metrics_collector.h  quality_evaluator.cpp  quality_evaluator.h
src/security/: rate_limiter.h  stream_id_validator.h
src/utils/: auth_rate_limiter.cpp  auth_rate_limiter.h  nak_dedup.cpp  nak_dedup.h  network_utils.cpp  network_utils.h
